--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,9 +4,22 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+	<style>
+		#available-names{
+			display: flex;
+			flex-wrap: wrap;
+		}
+
+		#available-names div {
+			width: 200px;
+		}
+	</style>
 </head>
 <body>
 	<h1>Foo</h1>
+	<div id="available-names">
+		
+	</div>
 	<script src="/scripts/script.js"></script>
 </body>
 </html>
