--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<style>
 		#available-names{
 			display: flex;
@@ -12,6 +13,11 @@
 
 		#available-names div {
 			width: 200px;
+		}
+		.line{
+			fill:none;
+			stroke-width:1px;
+			stroke:black;
 		}
 	</style>
 </head>
