--- a/static/html/index.html
+++ b/static/html/index.html
@@ -16,14 +16,29 @@
 		}
 		.line{
 			fill:none;
-			stroke-width:1px;
+			stroke-width:2px;
 			stroke:black;
+			transition: 0.2s;
+		}
+		.fade{
+			opacity: 0.3;
+			stroke:grey!important;
+		}
+		.legend div{
+			width: 50px;
+			height: 20px;
+		}
+		#legend{
+			width: 300px;
 		}
 	</style>
 </head>
 <body>
 	<h1>Foo</h1>
 	<div id="available-names">
+		
+	</div>
+	<div id="legend">
 		
 	</div>
 	<script src="/scripts/script.js"></script>
