--- a/static/html/index.html
+++ b/static/html/index.html
@@ -6,6 +6,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<style>
+		body{
+			background: black;
+		}
 		#available-names{
 			display: flex;
 			flex-wrap: wrap;
@@ -16,13 +19,13 @@
 		}
 		.line{
 			fill:none;
-			stroke-width:2px;
+			stroke-width:1px;
 			stroke:black;
 			transition: 0.2s;
 		}
 		.fade{
 			opacity: 0.3;
-			stroke:grey!important;
+			stroke:white!important;
 		}
 		.legend div{
 			width: 50px;
@@ -30,6 +33,11 @@
 		}
 		#legend{
 			width: 300px;
+		}
+
+		.axis-x path,.axis-y path, .tick line, text{
+			stroke:white;
+			color:white;
 		}
 	</style>
 </head>
