--- a/static/html/index.html
+++ b/static/html/index.html
@@ -35,9 +35,15 @@
 			width: 300px;
 		}
 
-		.axis-x path,.axis-y path, .tick line, text{
+		.axis-x path,.axis-y path, .tick line{
 			stroke:white;
 			color:white;
+		}
+
+		text{
+			font-family: Arial, sans-serif;
+			stroke:none;
+			fill:#ffffff;
 		}
 	</style>
 </head>
